Modificados tests, mejoras de código. Seguridad y legislación según LOPDGG y RGPD