@@ -1,11 +1,15 @@
 package com.hcc.tfm_hcc.service;
 
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -14,8 +18,6 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -23,7 +25,6 @@ import java.util.UUID;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.io.TempDir;
 import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -37,6 +38,7 @@ import org.springframework.web.multipart.MultipartFile;
 
 import com.hcc.tfm_hcc.constants.ErrorMessages;
 import com.hcc.tfm_hcc.model.ArchivoClinico;
+import com.hcc.tfm_hcc.model.AuditoriaCambio;
 import com.hcc.tfm_hcc.model.Usuario;
 import com.hcc.tfm_hcc.repository.ArchivoClinicoRepository;
 import com.hcc.tfm_hcc.repository.UsuarioRepository;
@@ -62,14 +64,20 @@ class ArchivoClinicoServiceImplTest {
      */
     private static final String PREFIJO_CIFRADO_FALSO = "CIFRADO:";
 
+    /**
+     * Cifrado "de mentira" para el nombre de archivo: antepone un prefijo fijo,
+     * igual que {@link #PREFIJO_CIFRADO_FALSO} pero para FieldEncryptionService.
+     */
+    private static final String PREFIJO_NOMBRE_FALSO = "NOMBRE_CIFRADO:";
+
     @Mock
     private ArchivoCifradoService archivoCifradoService;
 
+    @Mock
+    private FieldEncryptionService fieldEncryptionService;
+
     @InjectMocks
     private ArchivoClinicoServiceImpl service;
-
-    @TempDir
-    Path tempDir;
 
     private AutoCloseable mocks;
     private Usuario usuario;
@@ -82,7 +90,6 @@ class ArchivoClinicoServiceImplTest {
         usuario = new Usuario();
         usuario.setId(UUID.randomUUID());
 
-        ReflectionTestUtils.setField(service, "baseDir", tempDir.toString());
         ReflectionTestUtils.setField(service, "maxSizeBytes", 1024L * 1024L);
         ReflectionTestUtils.setField(service, "allowedTypes", "");
 
@@ -94,11 +101,18 @@ class ArchivoClinicoServiceImplTest {
             return null;
         }).when(archivoCifradoService).cifrar(any(InputStream.class), any(OutputStream.class));
 
-        when(archivoCifradoService.descifrar(any(Path.class))).thenAnswer(invocation -> {
-            Path ruta = invocation.getArgument(0);
-            byte[] contenido = Files.readAllBytes(ruta);
+        when(archivoCifradoService.descifrar(any(InputStream.class))).thenAnswer(invocation -> {
+            InputStream entrada = invocation.getArgument(0);
+            byte[] contenido = entrada.readAllBytes();
             String texto = new String(contenido).substring(PREFIJO_CIFRADO_FALSO.length());
             return new ByteArrayInputStream(texto.getBytes());
+        });
+
+        when(fieldEncryptionService.cifrar(anyString()))
+                .thenAnswer(invocation -> PREFIJO_NOMBRE_FALSO + invocation.getArgument(0, String.class));
+        when(fieldEncryptionService.descifrar(anyString())).thenAnswer(invocation -> {
+            String valor = invocation.getArgument(0, String.class);
+            return valor.startsWith(PREFIJO_NOMBRE_FALSO) ? valor.substring(PREFIJO_NOMBRE_FALSO.length()) : valor;
         });
 
         SecurityContextHolder.getContext().setAuthentication(
@@ -112,9 +126,10 @@ class ArchivoClinicoServiceImplTest {
     }
 
     @Test
-    void listMine_returnsCurrentUserFiles() {
+    void listMine_returnsCurrentUserFilesWithDecryptedName() {
         ArchivoClinico archivo = new ArchivoClinico();
         archivo.setId(UUID.randomUUID());
+        archivo.setNombreOriginal(PREFIJO_NOMBRE_FALSO + "informe.pdf");
 
         when(archivoClinicoRepository.findByUsuarioIdOrderByFechaCreacionDesc(usuario.getId()))
                 .thenReturn(List.of(archivo));
@@ -122,6 +137,7 @@ class ArchivoClinicoServiceImplTest {
         List<ArchivoClinico> result = service.listMine();
 
         assertEquals(1, result.size());
+        assertEquals("informe.pdf", result.get(0).getNombreOriginal());
         verify(archivoClinicoRepository).findByUsuarioIdOrderByFechaCreacionDesc(usuario.getId());
     }
 
@@ -183,12 +199,23 @@ class ArchivoClinicoServiceImplTest {
 
     @SuppressWarnings("null")
     @Test
-    void uploadMine_savesMetadataAndFile() throws IOException {
+    void uploadMine_savesEncryptedMetadataAndContent() throws IOException {
         when(usuarioRepository.findById(usuario.getId())).thenReturn(Optional.of(usuario));
+        // Devuelve una copia (como haría una lectura real tras persistir) para que la
+        // mutación posterior del servicio (descifrar el nombre en el objeto devuelto)
+        // no afecte al objeto capturado por ArgumentCaptor, que debe reflejar tal cual
+        // lo que se envió a MongoDB (con el nombre todavía cifrado).
         when(archivoClinicoRepository.save(any(ArchivoClinico.class))).thenAnswer(invocation -> {
-            ArchivoClinico toSave = invocation.getArgument(0);
-            toSave.setId(UUID.randomUUID());
-            return toSave;
+            ArchivoClinico original = invocation.getArgument(0);
+            ArchivoClinico copia = new ArchivoClinico();
+            copia.setId(original.getId());
+            copia.setUsuarioId(original.getUsuarioId());
+            copia.setNombreOriginal(original.getNombreOriginal());
+            copia.setContentType(original.getContentType());
+            copia.setSizeBytes(original.getSizeBytes());
+            copia.setContenido(original.getContenido());
+            copia.setFechaCreacion(original.getFechaCreacion());
+            return copia;
         });
 
         MultipartFile file = new MockMultipartFile("file", "informe.pdf", "application/pdf", "contenido".getBytes());
@@ -199,31 +226,41 @@ class ArchivoClinicoServiceImplTest {
         assertEquals("informe.pdf", saved.getNombreOriginal());
         assertEquals("application/pdf", saved.getContentType());
         assertEquals(file.getSize(), saved.getSizeBytes());
-        assertTrue(Files.exists(Path.of(saved.getRutaAlmacenada())));
+        assertArrayEquals((PREFIJO_CIFRADO_FALSO + "contenido").getBytes(), saved.getContenido());
 
         ArgumentCaptor<ArchivoClinico> captor = ArgumentCaptor.forClass(ArchivoClinico.class);
         verify(archivoClinicoRepository).save(captor.capture());
-        assertEquals(usuario.getId(), captor.getValue().getUsuario().getId());
+        assertEquals(usuario.getId(), captor.getValue().getUsuarioId());
+        assertEquals(PREFIJO_NOMBRE_FALSO + "informe.pdf", captor.getValue().getNombreOriginal());
+
+        verify(auditoriaCambioService).registrarCambio(
+                eq(usuario.getId().toString()),
+                eq(usuario.getId().toString()),
+                isNull(),
+                eq("SUBIDA_ARCHIVO_CLINICO"),
+                eq("archivo_clinico"),
+                eq(saved.getId().toString()),
+                isNull(),
+                isNull(),
+                eq(AuditoriaCambio.TipoOperacion.CREATE),
+                any());
     }
 
     @Test
     void getMineResource_returnsResourceWhenOwnedAndReadable() throws IOException {
-        Path archivoFisico = tempDir.resolve("reporte.pdf");
-        Files.writeString(archivoFisico, "contenido");
-
         ArchivoClinico archivo = new ArchivoClinico();
         archivo.setId(UUID.randomUUID());
-        archivo.setUsuario(usuario);
-        archivo.setNombreOriginal("reporte.pdf");
-        archivo.setRutaAlmacenada(archivoFisico.toString());
+        archivo.setUsuarioId(usuario.getId());
+        archivo.setNombreOriginal(PREFIJO_NOMBRE_FALSO + "reporte.pdf");
+        archivo.setContenido((PREFIJO_CIFRADO_FALSO + "contenido").getBytes());
 
         when(archivoClinicoRepository.findByIdAndUsuarioId(archivo.getId(), usuario.getId()))
                 .thenReturn(Optional.of(archivo));
 
         Resource resource = service.getMineResource(archivo.getId());
 
-        assertTrue(resource.exists());
         assertTrue(resource.isReadable());
+        assertArrayEquals("contenido".getBytes(), resource.getInputStream().readAllBytes());
     }
 
     @Test
@@ -239,39 +276,57 @@ class ArchivoClinicoServiceImplTest {
     }
 
     @Test
-    void deleteMine_removesDatabaseRecordAndPhysicalFile() throws IOException {
-        Path archivoFisico = tempDir.resolve("a-eliminar.pdf");
-        Files.writeString(archivoFisico, "contenido");
-
+    void getMineResource_throwsWhenContentIsMissing() {
         ArchivoClinico archivo = new ArchivoClinico();
-        UUID archivoId = UUID.randomUUID();
-        archivo.setId(archivoId);
-        archivo.setUsuario(usuario);
-        archivo.setNombreOriginal("a-eliminar.pdf");
-        archivo.setRutaAlmacenada(archivoFisico.toString());
+        archivo.setId(UUID.randomUUID());
+        archivo.setUsuarioId(usuario.getId());
+        archivo.setNombreOriginal(PREFIJO_NOMBRE_FALSO + "sin-contenido.pdf");
 
-        when(archivoClinicoRepository.findByIdAndUsuarioId(archivoId, usuario.getId()))
+        when(archivoClinicoRepository.findByIdAndUsuarioId(archivo.getId(), usuario.getId()))
                 .thenReturn(Optional.of(archivo));
 
-        service.borrarArchivo(archivoId);
+        IllegalStateException ex = assertThrows(IllegalStateException.class,
+                () -> service.getMineResource(archivo.getId()));
 
-        verify(archivoClinicoRepository).delete(archivo);
-        assertTrue(Files.notExists(archivoFisico));
+        assertEquals(ErrorMessages.ERROR_ARCHIVO_NO_ACCESIBLE, ex.getMessage());
     }
 
     @Test
-    void deleteMine_doesNotFailWhenPhysicalFileDoesNotExist() {
+    void deleteMine_removesDocumentFromRepository() {
         ArchivoClinico archivo = new ArchivoClinico();
         UUID archivoId = UUID.randomUUID();
         archivo.setId(archivoId);
-        archivo.setUsuario(usuario);
-        archivo.setNombreOriginal("inexistente.pdf");
-        archivo.setRutaAlmacenada(tempDir.resolve("inexistente.pdf").toString());
+        archivo.setUsuarioId(usuario.getId());
+        archivo.setNombreOriginal(PREFIJO_NOMBRE_FALSO + "a-eliminar.pdf");
 
         when(archivoClinicoRepository.findByIdAndUsuarioId(archivoId, usuario.getId()))
                 .thenReturn(Optional.of(archivo));
 
         assertDoesNotThrow(() -> service.borrarArchivo(archivoId));
+
         verify(archivoClinicoRepository).delete(archivo);
+        verify(auditoriaCambioService).registrarCambio(
+                eq(usuario.getId().toString()),
+                eq(usuario.getId().toString()),
+                isNull(),
+                eq("BORRADO_ARCHIVO_CLINICO"),
+                eq("archivo_clinico"),
+                eq(archivoId.toString()),
+                isNull(),
+                isNull(),
+                eq(AuditoriaCambio.TipoOperacion.DELETE),
+                any());
+    }
+
+    @Test
+    void deleteMine_throwsWhenFileIsNotOwned() {
+        UUID archivoId = UUID.randomUUID();
+        when(archivoClinicoRepository.findByIdAndUsuarioId(archivoId, usuario.getId()))
+                .thenReturn(Optional.empty());
+
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+                () -> service.borrarArchivo(archivoId));
+
+        assertEquals(ErrorMessages.ERROR_ARCHIVO_NO_EXISTE, ex.getMessage());
     }
 }
